@@ -1,5 +1,10 @@
 2006-03-05  MenTaLguY  <mental@rydia.net>
 
+    * src/document-subset.cpp: remove unneeded document parameter from
+	  constructor
+
+2006-03-05  MenTaLguY  <mental@rydia.net>
+
     * src/document-subset.cpp:
 
 	  Wire up new SPObject signal to DocumentSubset, so order changes
